# trackie

./: .gitignore  README.md  main.py  pyproject.toml
src/trackie/: ansi_colors.py  cli.py  conf.py  output.py  utils.py
src/trackie/repositories/: base.py  file_edit.py
src/trackie/work/: cli.py  conf.py  conf_example.py  logic.py  models.py  stats.py
tests/: conftest.py  test_config.py  test_input_validation.py  test_regexes.py  test_utils.py
tests/repositories/: test_no_write_file_repository.py
tests/work/: fixtures.py  test_file_edit_repository.py  test_vim_otl_stats.py
