[project]
name = "trackie"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "typer",
]

[dependency-groups]
dev = [
    "ipython>=9.0.2",
    "mypy>=1.15.0",
    "pdbpp>=0.10.3",
    "ruff",
    "pytest>=8.3.5",
]

[tool.uv]
package = true

[project.scripts]
wtrack = "trackie.cli:app"

# [build-system]
# requires = ["uv"]
# build-backend = "uv"

# [tool.pytest.ini_options]
# pythonpath = [
#     "src"
# ]
